advanced settings modal

--- a/Components/LayerControlView.xaml
+++ b/Components/LayerControlView.xaml
@@ -5,6 +5,7 @@
              xmlns:models="clr-namespace:LunaDraw.Logic.Models"
              xmlns:converters="clr-namespace:LunaDraw.Converters"
              xmlns:components="clr-namespace:LunaDraw.Components"
+             xmlns:strings="clr-namespace:LunaDraw.Resources.Strings"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="LunaDraw.Components.LayerControlView"
              x:DataType="viewModels:MainViewModel"
@@ -22,6 +23,7 @@
           Padding="10"
           StrokeShape="RoundRectangle 10"
           x:Name="LayerControlBorder"
+          IsVisible="{Binding ShowLayersPanel}"
           WidthRequest="{Binding Source={x:Reference Root}, Path=IsLayerPanelExpanded, Converter={StaticResource BoolToLayerPanelWidthConverter}, x:DataType=components:LayerControlView}">
 
     <VerticalStackLayout>
@@ -32,11 +34,12 @@
         <Grid.GestureRecognizers>
           <TapGestureRecognizer Tapped="OnCollapseClicked"/>
         </Grid.GestureRecognizers>
-        <Label Text="Layers"
+        <Label Text="{x:Static strings:AppResources.Layers_Title}"
                FontAttributes="Bold"
                VerticalOptions="Center"/>
         <Button x:Name="CollapseButton"
                 Text="▶"
+                ToolTipProperties.Text="{x:Static strings:AppResources.ToolTip_CollapseLayers}"
                 BackgroundColor="Transparent"
                 TextColor="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource White}}"
                 Clicked="OnCollapseClicked"
@@ -108,6 +111,7 @@
                   <Button Text="{Binding IsVisible, Converter={StaticResource BoolToEyeIconConverter}}"
                           Command="{Binding Source={x:Reference Root}, Path=ViewModel.LayerPanelVM.ToggleLayerVisibilityCommand, x:DataType=components:LayerControlView}"
                           CommandParameter="{Binding .}"
+                          ToolTipProperties.Text="{x:Static strings:AppResources.ToolTip_LayerVisibility}"
                           Padding="0"
                           BackgroundColor="Transparent"
                           TextColor="Black"
@@ -121,6 +125,7 @@
                   <Button Text="{Binding IsLocked, Converter={StaticResource BoolToLockIconConverter}}"
                           Command="{Binding Source={x:Reference Root}, Path=ViewModel.LayerPanelVM.ToggleLayerLockCommand, x:DataType=components:LayerControlView}"
                           CommandParameter="{Binding .}"
+                          ToolTipProperties.Text="{x:Static strings:AppResources.ToolTip_LayerLock}"
                           Padding="0"
                           BackgroundColor="Transparent"
                           TextColor="Black"
@@ -137,64 +142,84 @@
 
         <HorizontalStackLayout Spacing="10"
                                HorizontalOptions="FillAndExpand">
-          <Button Text="+"
-                  Command="{Binding LayerPanelVM.AddLayerCommand}"
-                  ToolTipProperties.Text="Add Layer"
-                  FontSize="30"
-                  HeightRequest="72"
-                  WidthRequest="72"
-                  CornerRadius="10"
-                  BackgroundColor="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray700}}"
-                  TextColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
-                  HorizontalOptions="FillAndExpand"/>
-          <Button Text="🗑️"
-                  Command="{Binding LayerPanelVM.RemoveLayerCommand}"
-                  ToolTipProperties.Text="Remove Layer"
-                  FontSize="24"
-                  HeightRequest="72"
-                  WidthRequest="72"
-                  CornerRadius="10"
-                  BackgroundColor="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray700}}"
-                  TextColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
-                  HorizontalOptions="End">
-            <Button.Triggers>
-              <Trigger TargetType="Button"
-                       Property="IsEnabled"
-                       Value="False">
-                <Setter Property="Opacity"
-                        Value="0.5"/>
-              </Trigger>
-            </Button.Triggers>
-          </Button>
-          <Button HorizontalOptions="End"
-                  Text="⧉"
-                  Command="{Binding LayerPanelVM.ToggleTraceModeCommand}"
-                  ToolTipProperties.Text="Toggle Trace Mode"
-                  FontSize="30"
-                  HeightRequest="72"
-                  WidthRequest="72"
-                  CornerRadius="10"
-                  Padding="0"
-                  BorderWidth="0">
-            <Button.Triggers>
-              <DataTrigger TargetType="Button"
-                           Binding="{Binding LayerPanelVM.IsTransparentBackground}"
-                           Value="True">
-                <Setter Property="BackgroundColor"
-                        Value="{StaticResource Primary}"/>
-                <Setter Property="TextColor"
-                        Value="{StaticResource White}"/>
-              </DataTrigger>
-              <DataTrigger TargetType="Button"
-                           Binding="{Binding LayerPanelVM.IsTransparentBackground}"
-                           Value="False">
-                <Setter Property="BackgroundColor"
-                        Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray700}}"/>
-                <Setter Property="TextColor"
-                        Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"/>
-              </DataTrigger>
-            </Button.Triggers>
-          </Button>
+          <VerticalStackLayout HorizontalOptions="FillAndExpand">
+            <Button Text="+"
+                    Command="{Binding LayerPanelVM.AddLayerCommand}"
+                    ToolTipProperties.Text="{x:Static strings:AppResources.ToolTip_AddLayer}"
+                    FontSize="30"
+                    HeightRequest="72"
+                    WidthRequest="72"
+                    CornerRadius="10"
+                    BackgroundColor="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray700}}"
+                    TextColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
+                    HorizontalOptions="Center"/>
+             <Label Text="{x:Static strings:AppResources.ToolTip_AddLayer}"
+                    FontSize="12"
+                    HorizontalTextAlignment="Center"
+                    IsVisible="{Binding ShowButtonLabels}"/>
+          </VerticalStackLayout>
+          
+          <VerticalStackLayout HorizontalOptions="End">
+            <Button Text="🗑️"
+                    Command="{Binding LayerPanelVM.RemoveLayerCommand}"
+                    ToolTipProperties.Text="{x:Static strings:AppResources.ToolTip_RemoveLayer}"
+                    FontSize="24"
+                    HeightRequest="72"
+                    WidthRequest="72"
+                    CornerRadius="10"
+                    BackgroundColor="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray700}}"
+                    TextColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
+                    HorizontalOptions="Center">
+              <Button.Triggers>
+                <Trigger TargetType="Button"
+                         Property="IsEnabled"
+                         Value="False">
+                  <Setter Property="Opacity"
+                          Value="0.5"/>
+                </Trigger>
+              </Button.Triggers>
+            </Button>
+            <Label Text="{x:Static strings:AppResources.Label_Delete}"
+                   FontSize="12"
+                   HorizontalTextAlignment="Center"
+                   IsVisible="{Binding ShowButtonLabels}"/>
+          </VerticalStackLayout>
+          
+          <VerticalStackLayout HorizontalOptions="End" Margin="20,0,0,0">
+            <Button Text="⧉"
+                    Command="{Binding LayerPanelVM.ToggleTraceModeCommand}"
+                    ToolTipProperties.Text="{x:Static strings:AppResources.ToolTip_ToggleTraceMode}"
+                    FontSize="30"
+                    HeightRequest="72"
+                    WidthRequest="72"
+                    CornerRadius="10"
+                    Padding="0"
+                    BorderWidth="0"
+                    HorizontalOptions="Center">
+              <Button.Triggers>
+                <DataTrigger TargetType="Button"
+                             Binding="{Binding LayerPanelVM.IsTransparentBackground}"
+                             Value="True">
+                  <Setter Property="BackgroundColor"
+                          Value="{StaticResource Primary}"/>
+                  <Setter Property="TextColor"
+                          Value="{StaticResource White}"/>
+                </DataTrigger>
+                <DataTrigger TargetType="Button"
+                             Binding="{Binding LayerPanelVM.IsTransparentBackground}"
+                             Value="False">
+                  <Setter Property="BackgroundColor"
+                          Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray700}}"/>
+                  <Setter Property="TextColor"
+                          Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"/>
+                </DataTrigger>
+              </Button.Triggers>
+            </Button>
+            <Label Text="Trace"
+                   FontSize="12"
+                   HorizontalTextAlignment="Center"
+                   IsVisible="{Binding ShowButtonLabels}"/>
+          </VerticalStackLayout>
         </HorizontalStackLayout>
       </VerticalStackLayout>
     </VerticalStackLayout>
